--- a/_changelog.html
+++ b/_changelog.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible"content="IE=edge"/>
-        <meta name="viewport"content="width=device-width,initial-scale=1.0"/>
-        <link rel="stylesheet"type="text/css" href="webassets/guide.css"/> 
-        <link rel="icon" type="image/x-icon" href="webassets/site-icon-32x-changelog.ico">
+        <meta charset = "UTF-8" http-equiv = "X-UA-Compatible" content = "IE=edge"/>
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0" />
+        <link rel = "stylesheet" type = "text/css" href = "webassets/guide.css" /> 
+        <link rel = "icon" type = "image/x-icon" href = "webassets/site-icon-32x-changelog.ico" />
         <title>Local Oaf's 8&times;8 Pack Changelog</title>
     </head>
-    <div id="home"></div>
-    <img src="webassets/banner.png"class="banner"alt="banner wasn't able to render :&lpar;"/>
+    <div id = "home"></div>
+    <img src = "webassets/banner.png" class = "banner" alt = "banner wasn't able to render :&lpar;" />
     <h1>Changelog</h1>
     Jump to:<br>
     <a href="_guide.html#home">Usage Guide</a> / 
@@ -1740,7 +1739,7 @@
     &emsp;&emsp;$textures/gui/sprites/widget/text_field.png<br>
     &emsp;&emsp;$textures/gui/sprites/widget/text_field_highlighted.png<br>
     <div id="1.2.0"></div>
-    <div id="latest"></div><!-- MOVE THIS EVERY UPDATE ________________________________________________________________________________________________-->
+    
     <h2>April 12<sup>th</sup>, 2025, 1.2.0 for 1.21.4</h2>
     - Fixed free-standing banner model for 1.21.4, wall mounted banner temporarily broken...<br>
     - Added support for slim player skins.<br>
@@ -1863,6 +1862,10 @@
     &emsp;&emsp;$textures/item/_oaf/bv_waxedcutcopperstairs2.png<br>
     &emsp;&emsp;$textures/item/_oaf/bv_waxedcutcopperstairs3.png<br>
     &emsp;&emsp;$textures/item/_oaf/bv_waxedcutcopperstairs4.png<br>
+    <div id="changes_on_10_05_2025"></div>
+    <div id="latest"></div><!-- MOVE THIS EVERY UPDATE ________________________________________________________________________________________________-->
+    <h2>May 10<sup>th</sup>, 2025</h2>
+    - Began uploading the project to GitHub, versions no longer have numbers, changes listed by date.
 
     <br><br><br>
     <span class="smallText">"%" = Pack Root<br>"$" = "%assets/minecraft/"</span>
