--- a/_changelog.html
+++ b/_changelog.html
@@ -1838,6 +1838,38 @@
     <div id = "changes_on_10_05_2025"></div>
     <h2>May 10<sup>th</sup>, 2025 (1.21.4)</h2>
     - Began uploading the project to GitHub, versions no longer have numbers, changes listed by date.
+    Added/Modified files:<br>
+    &emsp;&emsp;$textures/block/bush.png<br>
+    &emsp;&emsp;$textures/block/cactus_flower.png<br>
+    &emsp;&emsp;$textures/block/firefly_bush.png<br>
+    &emsp;&emsp;$textures/block/firefly_bush_emissive.png<br>
+    &emsp;&emsp;$textures/block/firefly_bush_emissive.png.mcmeta<br>
+    &emsp;&emsp;$textures/block/creaking_heart_dormant.png<br>
+    &emsp;&emsp;$textures/block/creaking_heart_top_dormant.png<br>
+    &emsp;&emsp;$textures/block/short_dry_grass.png<br>
+    &emsp;&emsp;$textures/block/tall_dry_grass.png<br>
+    &emsp;&emsp;$textures/block/test_block_accept.png<br>
+    &emsp;&emsp;$textures/block/test_block_fail.png<br>
+    &emsp;&emsp;$textures/block/test_block_log.png<br>
+    &emsp;&emsp;$textures/block/test_block_start.png<br>
+    &emsp;&emsp;$textures/block/test_instance_block.png<br>
+    &emsp;&emsp;$textures/item/light.png<br>
+    &emsp;&emsp;$textures/item/light_00.png<br>
+    &emsp;&emsp;$textures/item/light_01.png<br>
+    &emsp;&emsp;$textures/item/light_02.png<br>
+    &emsp;&emsp;$textures/item/light_03.png<br>
+    &emsp;&emsp;$textures/item/light_04.png<br>
+    &emsp;&emsp;$textures/item/light_05.png<br>
+    &emsp;&emsp;$textures/item/light_06.png<br>
+    &emsp;&emsp;$textures/item/light_07.png<br>
+    &emsp;&emsp;$textures/item/light_08.png<br>
+    &emsp;&emsp;$textures/item/light_09.png<br>
+    &emsp;&emsp;$textures/item/light_10.png<br>
+    &emsp;&emsp;$textures/item/light_11.png<br>
+    &emsp;&emsp;$textures/item/light_12.png<br>
+    &emsp;&emsp;$textures/item/light_13.png<br>
+    &emsp;&emsp;$textures/item/light_14.png<br>
+    &emsp;&emsp;$textures/item/light_15.png<br>
 
     <br><br><br>
     <span class = "smallText">"%" = Pack Root<br>"$" = "%assets/minecraft/"</span>
