--- a/_changelog.html
+++ b/_changelog.html
@@ -1853,6 +1853,9 @@
     &emsp;&emsp;$textures/block/test_block_log.png<br>
     &emsp;&emsp;$textures/block/test_block_start.png<br>
     &emsp;&emsp;$textures/block/test_instance_block.png<br>
+    &emsp;&emsp;$textures/entity/ghast/happy_ghast.png<br>
+    &emsp;&emsp;$textures/entity/ghast/happy_ghast_baby.png<br>
+    &emsp;&emsp;$textures/entity/ghast/happy_ghast_ropes.png<br>
     &emsp;&emsp;$textures/item/light.png<br>
     &emsp;&emsp;$textures/item/light_00.png<br>
     &emsp;&emsp;$textures/item/light_01.png<br>
