--- a/_changelog.html
+++ b/_changelog.html
@@ -26,7 +26,7 @@
     <a href = "#1.0.2">Release 1.0.2</a> /
     <a href = "#1.1.0">Release 1.1.0</a> /
     <a href = "#1.2.0">Release 1.2.0</a> /
-    <a href = "#changes_on_10_05_2025">May 10<sup>th</sup>, 2025</a>
+    <a href = "#1.3.0">Release 1.3.0</a>
 
     <div id = "b1.0.0.0"></div><div id = "_"></div>
     <h2>January 12<sup>th</sup>, 2025, b1.0.0.0</h2>
@@ -1835,9 +1835,9 @@
     &emsp;&emsp;$textures/item/_oaf/bv_waxedcutcopperstairs4.png<br>
     
     <div id = "latest"></div><!-- MOVE THIS EVERY UPDATE ________________________________________________________________________________________________-->
-    <div id = "changes_on_10_05_2025"></div>
-    <h2>May 10<sup>th</sup>, 2025 (1.21.4)</h2>
-    - Began uploading the project to GitHub, versions no longer have numbers, changes listed by date.
+    <div id = "1.3.0"></div>
+    <h2>May 10<sup>th</sup>, 2025, 1.3.0 for 1.21.4</h2>
+    - Textured bush, cactus flower, firefly bush, creaking heart (dormant), short dry grass, tall dry grass, test blocks, happy ghasts, & lights.
     Added/Modified files:<br>
     &emsp;&emsp;$textures/block/bush.png<br>
     &emsp;&emsp;$textures/block/cactus_flower.png<br>
