--- a/_changelog.html
+++ b/_changelog.html
@@ -1837,7 +1837,7 @@
     <div id = "latest"></div><!-- MOVE THIS EVERY UPDATE ________________________________________________________________________________________________-->
     <div id = "1.0.3.0"></div>
     <h2>May 10<sup>th</sup>, 2025, 1.0.3.0 for 1.21.4</h2>
-    - Textured bush, cactus flower, firefly bush, creaking heart (dormant), short dry grass, tall dry grass, test blocks, happy ghasts, & lights.
+    - Textured bush, cactus flower, firefly bush, creaking heart (dormant), short dry grass, tall dry grass, test blocks, happy ghasts, & lights.<br>
     Added/Modified files:<br>
     &emsp;&emsp;$textures/block/bush.png<br>
     &emsp;&emsp;$textures/block/cactus_flower.png<br>
