--- a/_changelog.html
+++ b/_changelog.html
@@ -10,6 +10,6 @@
     <div id = "home"></div>
     <span id = "changelog_content"></span>
     <br><br><br>
-    <span class = "smallText">"%" = Pack Root<br>"$" = "%assets/minecraft/"</span>
+    <!--<span class = "smallText">"%" = Pack Root<br>"$" = "%assets/minecraft/"</span>-->
     <script src = "webassets/core.js"></script>
 </html>
