--- a/_credits.html
+++ b/_credits.html
@@ -8,6 +8,8 @@
         <link rel="icon" type="image/x-icon" href="webassets/site-icon-32x-credits.ico">
         <title>Local Oaf's 8&times;8 Credits</title>
     </head>
+    <div id = "home"></div>
+    <img src="webassets/banner.png"class="banner"alt="If this banner doesn't render, your installation of the pack may be corrupted...<br>Try re-downloading the pack... If the problem persists it's likely a developer issue!" />
     <span id = "credits_content"></span>
     <script src = "webassets/core.js"></script>
 </html>
