--- a/_guide.html
+++ b/_guide.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset = "UTF-8" http-equiv = "X-UA-Compatible" content = "IE=edge" />
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0" />
-        <link rel = "stylesheet" type = "text/css" href = "webassets/guide.css" />
-        <link rel = "icon" type = "image/x-icon" href = "webassets/site-icon-32x-usage-guide.ico">
+        <link rel = "stylesheet" type = "text/css" href = "assets/guide.css" />
+        <link rel = "icon" type = "image/x-icon" href = "assets/32-x-32-usage-guide.ico">
         <title>Local Oaf's 8&times;8 Pack Usage Guide</title>
     </head>
     <div id = "home"></div>
     <span id = "guide_content"></span>
-    <script src = "webassets/core.js"></script>
+    <script src = "assets/core.js"></script>
 </html>
