--- a/_changelog.html
+++ b/_changelog.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset = "UTF-8" http-equiv = "X-UA-Compatible" content = "IE=edge"/>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0" />
-        <link rel = "stylesheet" type = "text/css" href = "assets/guide.css" /> 
-        <link rel = "icon" type = "image/x-icon" href = "assets/32-x-32-changelog.ico" />
+        <link rel = "stylesheet" type = "text/css" href = "dev-assets/styles.css" /> 
+        <link rel = "icon" type = "image/x-icon" href = "dev-assets/32-x-32/changelog.ico" />
         <title>Local Oaf's 8&times;8 Pack Changelog</title>
     </head>
     <div id = "home"></div>
     <span id = "changelog_content"></span>
     <br><br><br>
     <!--<span class = "smallText">"%" = Pack Root<br>"$" = "%assets/minecraft/"</span>-->
-    <script src = "assets/core.js"></script>
+    <script src = "dev-assets/webpage-driver.js"></script>
 </html>
