--- a/_credits.html
+++ b/_credits.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="assets/guide.css" />
-        <link rel="icon" type="image/x-icon" href="assets/32-x-32-credits.ico">
+        <link rel="stylesheet" type="text/css" href="dev-assets/styles.css" />
+        <link rel="icon" type="image/x-icon" href="dev-assets/32-x-32/credits.ico">
         <title>Local Oaf's 8&times;8 Credits</title>
     </head>
     <div id = "home"></div>
     <span id = "credits_content"></span>
-    <script src = "assets/core.js"></script>
+    <script src = "dev-assets/webpage-driver.js"></script>
 </html>
